src/objects/Interest__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>Interest</relationshipLabel>
        <relationshipName>Interest</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Interest %</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Interest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>